[package]
name = "ollamatui"
version = "0.1.0"
authors = ["Fulton Browne <fultonbrowne@pm.me>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
dirs = "6.0.0"
futures-util = "0.3.31"
